# cmasfo-git

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/: _README.md
_bin/: bin.rs  cli.rs  gui.rs  svc.rs
_src/: lib.rs
_src/_bin/: bin.rs  gui.rs
_src/fs/: mod.rs
_src/string/: mod.rs
_src/xcli/: io.rs  mod.rs
_src/xstr/: mod.rs
c-cpp/: README.md
code/: README.md
code/rust/: README.md
computer/architecture/: README.md
data2/: README.md
dev/rustup/: README.md
docs/: README.md
dsa/: README.md
era/: README.md
foreign/: README.md
geo/: README.md
hw-sw/: README.md
java/: README.md
java/hello/: Hello.java
js-ts/: README.md
js-ts/hello-ts/: hello.js  hello.ts
korean/: README.md
korean/개발/: README.md
korean/자격-면허/대한상공회의소(KorCham)/: README.md
korean/자격-면허/대한상공회의소(KorCham)/컴퓨터활용능력2급/: README.md
korean/자격-면허/한국데이터산업진흥원(K-data)/SQL개발자(SQLD)/: README.md
korean/학과-학점/: README.md
kotlin/hello/: hello.kt
l10n/: README.md
l10n/ja/: README.md
l10n/ko/: README.md
l10n/ko/asset/: index-en.md
l10n/ko/cert/: README.md
l10n/ko/docs/: README.md
l10n/ko/era/: README.md
l10n/ko/geo/: README.md
l10n/ko/geo-int/: README.md
l10n/ko/geo-nat/: README.md
l10n/ko/geo/82_대한민국/: README.md
l10n/ko/hist/: README.md
l10n/ko/med/: README.md
l10n/ko/oa/: README.md
l10n/ko/univ/: README.md
l10n/ko/web/: README.md
l10n/korean/cert/: README.md
lang/: README.md
local/: README.md
python/hello/: hello.py
python/window/: window.py
r/hello/: hello.r
r/window/: window.r
web-app_2/nest/: README.md
(+38 files in other folders)
