
# main rust project
[package]
# basic
name = "rust"
version = "0.1.0"
edition = "2021"
# additional
default-run = "cli"
build = "_pre/build.rs"

# common library
[lib]
name = "lib"
path = "_src/lib.rs"

# start app with cli
[[bin]]
name = "cli"
path = "_bin/cli.rs"

# start app with gui
[[bin]]
name = "gui"
path = "_bin/gui.rs"

# start app with no ui
[[bin]]
name = "bin"
path = "_bin/bin.rs"

[dependencies]
# popular crates
rand = "0"
# windowing
winit = "0"
