
[package]
# basic
name = "rust"
version = "0.1.0"
edition = "2021"
# additional
default-run = "cli"
build = "_pre/build.rs"

[lib]
name = "lib"
path = "_src/lib.rs"

# cli mode (terminal, default)
[[bin]]
name = "cli"
path = "_bin/cli.rs"

# gui mode (web-browser)
[[bin]]
name = "gui"
path = "_bin/gui.rs"

# service mode (no ui)
[[bin]]
name = "svc"
path = "_bin/svc.rs"

[dependencies]
rand = "0"
winit = "0"
